testsuite/tests/properties/invalid_predicate/bad_argument_type/test.lkt
from common import BaseExample, FooNode

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = Example.pred1%(node.var1, true);
        node.as_bare_entity
    }
}
